2007-05-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/fits/fitsrw.c
	* plug-ins/fits/fits.c: applied modified patch from Peter
	Kirchgessner. Fixes creation of the last data record and makes
	handling of float values independent of the locale (bug #351656).

2007-05-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpfu.py: don't add the radiobuttons into a
	GtkFrame.

	* plug-ins/pygimp/plug-ins/sphere.py: added a PF_RADIO parameter
	as an example and for testing purposes.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/mapcolor.c: try to do something reasonable for
	the empty source range (bug #436145).

2007-05-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/helpbrowser/dialog.c: start with a reasonable size and
	paned position and remember the window size and paned position at
	least within a GIMP session.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* gimptool-2.0.in: define datarootdir before datadir (bug #436386).

2007-05-06  Sven Neumann  <sven@gimp.org>

	* configure.in: require libexif >= 0.6.0.

	* plug-ins/jpeg/gimpexif.[ch]: removed gimp_exif_entry_get_value()
	which was needed to work with libexif < 0.6.0.

	* plug-ins/jpeg/jpeg.c: declare the global ExifData here instead
	of in gimpexif.c.

	* plug-ins/jpeg/jpeg-exif.c: cosmetics.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-exif.c (jpeg_apply_exif_data_to_image): only
	check for EXIF_TAG_GPS_VERSION_ID if it's defined (see bug #377917).
	This tag was added in libexif 0.6.13.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* configure.in (AM_INIT_AUTOMAKE): pass dist-bzip2 to automake.

2007-05-06  Sven Neumann  <sven@gimp.org>

	* libgimpbase/Makefile.am (DISTCLEANFILES): clean gimpversion.h.

	* plug-ins/metadata/Makefile.am (CLEANFILES): clean testbase64.

	* po/Makefile.in.in (mostlyclean): clean .intltool-merge-cachemake

	* tools/pdbgen/Makefile.am: use DISTCLEANFILES instead of
	MAINTAINERCLEANFILES.

2007-05-06  Sven Neumann  <sven@gimp.org>
