@@ -1,5 +1,10 @@
 2007-05-07  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/gauss.c: reduce rounding errors when converting
+	between premultiplied and separated alpha. Fixes bug #383870.
+
+2007-05-07  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/fits/fitsrw.c
 	* plug-ins/fits/fits.c: applied modified patch from Peter
 	Kirchgessner. Fixes creation of the last data record and makes
